--- a/index.html
+++ b/index.html
@@ -6,63 +6,81 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PurpleDoll</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div>
-      <figure>
+      <figure class="logo">
         <img src="images/logo.png" alt="Logo de Leonidas">
       </figure>
-      <nav>
+      <nav class="menu">
         <ol>
           <li>
-            <a href="">Portfolio</a>
+            <a class="link" href="portfolio/index.html">Portfolio</a>
           </li>
           <li>
-            <a href="">Experience</a>
+            <a class="link" href="#experience">Experience</a>
           </li>
           <li>
-            <a href="">Let's work together!</a>
+            <a class="link" href="#contact">Let's work together!</a>
           </li>
         </ol>
       </nav>
     </div>
   </header>
-  <section>
+  <section class="hero">
     <h1>
-      Hi there! I'm <strong>PurpleDoll</strong>, Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
+      Hi there! I'm <strong>PurpleDoll,</strong> Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
     </h1>
-    <img src="images/hero.jpg" width="500" height="300" alt="Site's principal image"> Imagen de portada
+    <!-- <img src="images/hero.jpg" width="500" height="300" alt="Site's principal image"> Imagen de portada -->
   </section>
-  <section>
+  <section id="portfolio" class="portfolio">
     <h2>Portfolio</h2>
-    <article>
-      <h3>Platzi Student</h3>
-      <h6>HTML, PHP, CSS, Javascript</h6>
-      <p><small><strong>Date:</strong> 01/07/2018</small></p>
-      <p><small><strong>You can find it here:</strong> -link- </small></p>
-      <p>Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
-      <img src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
-    </article>
-  </section>
-  <section>
-    <h2>More about my experience</h2>
-    <article>
-      <figure>
-        <img src="images/platzi-conf.jpg" width="500" alt="">
+    <article class="project">
+      <div class="project-details">
+        <h3 class="project-title">Platzi Student</h3>
+        <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
+        <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
+        <p class="project-url"><small><strong>You can find it here:</strong> -link- </small></p>
+        <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
+      </div>
+      <figure class="project-imageContainer">
+        <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
       </figure>
-      <h3>PlatziConf México 2018</h3>
-      <p>El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-      <a href="">More info...</a>
+    </article>
+    <article class="project">
+      <div class="project-details">
+        <h3 class="project-title">Platzi Student</h3>
+        <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
+        <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
+        <p class="project-url"><small><strong>You can find it here:</strong> -link- </small></p>
+        <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
+      </div>
+      <figure class="project-imageContainer">
+        <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
+      </figure>
     </article>
   </section>
-  <section>
-    <form action="/suscripcion/">
-      <h3>Should we create comething together?</h3>
+  <section id="experience">
+    <h2>More about my experience</h2>
+    <article class="event">
+      <figure class="event-imageContainer">
+        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+      </figure>
+      <h3 class="event-title">PlatziConf México 2018</h3>
+      <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+      <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+    </article>
+  </section>
+  <section id="contact" class="contact">
+    <form action="/suscripcion/" class="form-email">
+      <h3>Should we create something together?</h3>
       <input type="text" placeholder="Leave your email">
       <button>Send</button>
     </form>
   </section>
-  <footer>Footer</footer>
+  <footer class="footer">Footer</footer>
 </body>
 </html>
