--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
 </head>
 <body>
   <header class="header">
-    <div>
-      <figure class="logo">
-        <img src="images/logo.png" alt="Logo de Leonidas">
-      </figure>
-      <nav class="menu">
-        <ol>
-          <li>
-            <a class="link" href="portfolio/index.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link" href="#experience">Experience</a>
-          </li>
-          <li>
-            <a class="link" href="#contact">Let's work together!</a>
-          </li>
-        </ol>
-      </nav>
-    </div>
+    <figure class="logo">
+      <img src="images/logo.png" height="50px" alt="Logo de Leonidas">
+    </figure>
+    <nav class="menu">
+      <ol>
+        <li>
+          <a class="link" href="portfolio/index.html">Portfolio</a>
+        </li>
+        <li>
+          <a class="link" href="#experience">Experience</a>
+        </li>
+        <li>
+          <a class="link" href="#contact">Let's work together!</a>
+        </li>
+      </ol>
+    </nav>
   </header>
   <section class="hero">
     <h1>
@@ -43,7 +41,7 @@
         <h3 class="project-title">Platzi Student</h3>
         <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
         <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
-        <p class="project-url"><small><strong>You can find it here:</strong> -link- </small></p>
+        <p class="project-url"><small><strong>You can find it here:</strong> www.platzi.com </small></p>
         <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
       </div>
       <figure class="project-imageContainer">
@@ -63,15 +61,47 @@
       </figure>
     </article>
   </section>
-  <section id="experience">
-    <h2>More about my experience</h2>
+  <h2 class="event-list-title">More about my experience</h2>
+  <section id="experience" class="event-list">
     <article class="event">
       <figure class="event-imageContainer">
         <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
       </figure>
-      <h3 class="event-title">PlatziConf México 2018</h3>
-      <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-      <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+      <div class="event-detail">
+        <h3 class="event-title">PlatziConf México 2018</h3>
+        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+      </div>
+    </article>
+    <article class="event">
+      <figure class="event-imageContainer">
+        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+      </figure>
+      <div class="event-detail">
+        <h3 class="event-title">PlatziConf México 2018</h3>
+        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+      </div>
+    </article>
+    <article class="event">
+      <figure class="event-imageContainer">
+        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+      </figure>
+      <div class="event-detail">
+        <h3 class="event-title">PlatziConf México 2018</h3>
+        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+      </div>
+    </article>
+    <article class="event">
+      <figure class="event-imageContainer">
+        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+      </figure>
+      <div class="event-detail">
+        <h3 class="event-title">PlatziConf México 2018</h3>
+        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+      </div>
     </article>
   </section>
   <section id="contact" class="contact">
@@ -81,6 +111,15 @@
       <button>Send</button>
     </form>
   </section>
-  <footer class="footer">Footer</footer>
+  <footer class="footer">
+    <div>
+      <p>Online web development 2018 <img src="images/platzi.png" width="80" alt="platzi"></p>
+    </div>
+    <div>
+      <p>
+        Designed with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a> and <a href="http://www.twitter.com/purpledoll001">@purpledoll001</a>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
