--- a/index.html
+++ b/index.html
@@ -11,105 +11,123 @@
 </head>
 <body>
   <header class="header">
-    <figure class="logo">
-      <img src="images/logo.png" height="50px" alt="Logo de Leonidas">
-    </figure>
-    <nav class="menu">
-      <ol>
-        <li>
-          <a class="link" href="portfolio/index.html">Portfolio</a>
-        </li>
-        <li>
-          <a class="link" href="#experience">Experience</a>
-        </li>
-        <li>
-          <a class="link" href="#contact">Let's work together!</a>
-        </li>
-      </ol>
-    </nav>
+    <div class="container">
+      <figure class="logo">
+        <img src="images/logo.png" height="50px" alt="Logo de Leonidas">
+      </figure>
+      <nav class="menu">
+        <ol>
+          <li>
+            <a class="link" href="#portfolio">Portfolio</a>
+          </li>
+          <li>
+            <a class="link" href="#experience">Experience</a>
+          </li>
+          <li>
+            <a class="link" href="#contact">Let's work together!</a>
+          </li>
+        </ol>
+      </nav>
+    </div>
   </header>
   <section class="hero">
-    <h1>
-      Hi there! I'm <strong>PurpleDoll,</strong> Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
-    </h1>
-    <!-- <img src="images/hero.jpg" width="500" height="300" alt="Site's principal image"> Imagen de portada -->
+    <div class="container">
+      <h1>
+        Hi there! I'm <strong>PurpleDoll,</strong> Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
+      </h1>
+      <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="Site's principal image">
+    </div>
   </section>
   <section id="portfolio" class="portfolio">
-    <h2>Portfolio</h2>
-    <article class="project">
-      <div class="project-details">
-        <h3 class="project-title">Platzi Student</h3>
-        <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
-        <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
-        <p class="project-url"><small><strong>You can find it here:</strong> www.platzi.com </small></p>
-        <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
-      </div>
-      <figure class="project-imageContainer">
-        <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
-      </figure>
-    </article>
-    <article class="project">
-      <div class="project-details">
-        <h3 class="project-title">Platzi Student</h3>
-        <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
-        <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
-        <p class="project-url"><small><strong>You can find it here:</strong> -link- </small></p>
-        <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
-      </div>
-      <figure class="project-imageContainer">
-        <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
-      </figure>
-    </article>
+    <div class="container">
+      <h2>Portfolio</h2>
+      <article class="project">
+        <div class="project-details">
+          <h3 class="project-title">Platzi Student</h3>
+          <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
+          <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
+          <p class="project-url"><small><strong>You can find it here:</strong> www.platzi.com </small></p>
+          <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
+        </div>
+        <figure class="project-imageContainer">
+          <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
+        </figure>
+      </article>
+      <article class="project">
+        <div class="project-details">
+          <h3 class="project-title">Platzi Student</h3>
+          <h6 class="project-course">HTML, PHP, CSS, Javascript</h6>
+          <p class="project-date"><small><strong>Date:</strong> 01/07/2018</small></p>
+          <p class="project-url"><small><strong>You can find it here:</strong> -link- </small></p>
+          <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
+        </div>
+        <figure class="project-imageContainer">
+          <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
+        </figure>
+      </article>
+    </div>
   </section>
-  <h2 class="event-list-title">More about my experience</h2>
+  <div class="container">
+    <h2 class="event-list-title">More about my experience</h2>
+  </div>
   <section id="experience" class="event-list">
-    <article class="event">
-      <figure class="event-imageContainer">
-        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
-      </figure>
-      <div class="event-detail">
-        <h3 class="event-title">PlatziConf México 2018</h3>
-        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
-      </div>
-    </article>
-    <article class="event">
-      <figure class="event-imageContainer">
-        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
-      </figure>
-      <div class="event-detail">
-        <h3 class="event-title">PlatziConf México 2018</h3>
-        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
-      </div>
-    </article>
-    <article class="event">
-      <figure class="event-imageContainer">
-        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
-      </figure>
-      <div class="event-detail">
-        <h3 class="event-title">PlatziConf México 2018</h3>
-        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
-      </div>
-    </article>
-    <article class="event">
-      <figure class="event-imageContainer">
-        <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
-      </figure>
-      <div class="event-detail">
-        <h3 class="event-title">PlatziConf México 2018</h3>
-        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
-        <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
-      </div>
-    </article>
+    <div class="container">
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+          <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+          <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+          <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+          <a class="event-url" href="https://www.youtube.com/watch?v=u87xPqX02XQ" target="_blank">More info...</a>
+        </div>
+      </article>
+    </div>
   </section>
   <section id="contact" class="contact">
-    <form action="/suscripcion/" class="form-email">
-      <h3>Should we create something together?</h3>
-      <input type="text" placeholder="Leave your email">
-      <button>Send</button>
-    </form>
+    <div class="container">
+      <form action="/suscripcion/" class="form-email">
+        <h3>Should we create something together?</h3>
+        <input type="text" placeholder="Leave your email">
+        <button>Send</button>
+      </form>
+      <div class="social">
+        <a href="" class="social-link twitter"></a>
+        <a href="" class="social-link facebook"></a>
+        <a href="" class="social-link github"></a>
+        <a href="" class="social-link instagram"></a>
+      </div>
+    </div>
   </section>
   <footer class="footer">
     <div>
