--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PurpleDoll</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="css/media.css" media="screen and (max-width:768px)"> -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- <style>
+    @media screen and (max-width: 768px) {
+      body {
+        border: 10px solid blue;
+      }
+    }
+  </style> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <header class="header">
