--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </div>
   </header>
-  <section class="hero">
+  <!-- <section class="hero">
     <div class="container">
       <h1>
         Hi there! I'm <strong>PurpleDoll,</strong> Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
@@ -146,6 +146,6 @@
         Designed with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a> and <a href="http://www.twitter.com/purpledoll001">@purpledoll001</a>
       </p>
     </div>
-  </footer>
+  </footer> -->
 </body>
 </html>
