--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </h1>
       <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="Site's principal image">
     </div>
-  </section>
+  </section> -->
   <section id="portfolio" class="portfolio">
     <div class="container">
       <h2>Portfolio</h2>
@@ -58,7 +58,7 @@
           <p class="project-description">Here you can find all I've been learning using this platform, it's been a great effort and an amazing ride. Platzi helps people like me to become a developer, always trying different methods and bringing innovative curses, starting from beginners (Junior) to Seniors</p>
         </div>
         <figure class="project-imageContainer">
-          <img class="project-image" src="images/platzi-video-react-native.png" width="500" alt="React Native's project">
+          <img class="project-image" src="images/platzi-video-react-native.png" alt="React Native's project">
         </figure>
       </article>
       <article class="project">
@@ -75,10 +75,10 @@
       </article>
     </div>
   </section>
-  <div class="container">
+  <!-- <div class="container">
     <h2 class="event-list-title">More about my experience</h2>
-  </div>
-  <section id="experience" class="event-list">
+  </div> -->
+  <!-- <section id="experience" class="event-list">
     <div class="container">
       <article class="event">
         <figure class="event-imageContainer">
@@ -121,8 +121,8 @@
         </div>
       </article>
     </div>
-  </section>
-  <section id="contact" class="contact">
+  </section> -->
+  <!-- <section id="contact" class="contact">
     <div class="container">
       <form action="/suscripcion/" class="form-email">
         <h3>Should we create something together?</h3>
@@ -136,8 +136,8 @@
         <a href="" class="social-link instagram"></a>
       </div>
     </div>
-  </section>
-  <footer class="footer">
+  </section> -->
+  <!-- <footer class="footer">
     <div>
       <p>Online web development 2018 <img src="images/platzi.png" width="80" alt="platzi"></p>
     </div>
