--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       </article>
     </div>
   </section>
-  <!-- <div class="container">
+  <div class="container">
     <h2 class="event-list-title">More about my experience</h2>
-  </div> -->
-  <!-- <section id="experience" class="event-list">
+  </div>
+  <section id="experience" class="event-list">
     <div class="container">
       <article class="event">
         <figure class="event-imageContainer">
@@ -121,7 +121,7 @@
         </div>
       </article>
     </div>
-  </section> -->
+  </section>
   <!-- <section id="contact" class="contact">
     <div class="container">
       <form action="/suscripcion/" class="form-email">
