--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </article>
     </div>
   </section>
-  <!-- <section id="contact" class="contact">
+  <section id="contact" class="contact">
     <div class="container">
       <form action="/suscripcion/" class="form-email">
         <h3>Should we create something together?</h3>
@@ -136,16 +136,16 @@
         <a href="" class="social-link instagram"></a>
       </div>
     </div>
-  </section> -->
-  <!-- <footer class="footer">
+  </section>
+  <footer class="footer">
     <div>
       <p>Online web development 2018 <img src="images/platzi.png" width="80" alt="platzi"></p>
     </div>
     <div>
       <p>
-        Designed with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a> and <a href="http://www.twitter.com/purpledoll001">@purpledoll001</a>
+        Designed with 💜 by <a href="https://twitter.com/thespianartist">@thespianartist</a> and <a href="http://www.twitter.com/purpledoll001">@purpledoll001</a>
       </p>
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
