--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </nav>
     </div>
   </header>
-  <!-- <section class="hero">
+  <section class="hero">
     <div class="container">
       <h1>
         Hi there! I'm <strong>PurpleDoll,</strong> Javascript, <br> PHP and <strong>Web Developer</strong> <br> with a lot of <strong>passion</strong> for videogames
       </h1>
       <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="Site's principal image">
     </div>
-  </section> -->
+  </section>
   <section id="portfolio" class="portfolio">
     <div class="container">
       <h2>Portfolio</h2>
