--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
       </article>
       <article class="event">
         <figure class="event-imageContainer">
-          <img class="event-image" src="images/platzi-conf.jpg" width="500" alt="">
+          <div class="flexible-video">
+            <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/u87xPqX02XQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <!-- <img class="event-image" src="images/platzi-conf.jpg" width="500" alt=""> -->
         </figure>
         <div class="event-detail">
           <h3 class="event-title">PlatziConf México 2018</h3>
